// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests the Footer component renders the Footer component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Footer
    name="Steve McKinnon"
    socialMedia={
      Object {
        "github": "https://github.com/stevenmckinnon",
        "instagram": "http://instagram.com/stevenmckinnon",
        "linkedIn": "https://www.linkedin.com/in/stevenmckinnon92/",
        "photography": "http://stevenmckinnon.co.uk",
        "twitter": "http://twitter.com/stevenmckinnon",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
      >
        <div
          className="twelve columns"
        >
          <ul
            className="social-links"
          >
            <li>
              <a
                href="http://twitter.com/stevenmckinnon"
              >
                <i
                  className="fa fa-twitter"
                />
              </a>
            </li>
            <li>
              <a
                href="https://www.linkedin.com/in/stevenmckinnon92/"
              >
                <i
                  className="fa fa-linkedin"
                />
              </a>
            </li>
            <li>
              <a
                href="http://instagram.com/stevenmckinnon"
              >
                <i
                  className="fa fa-instagram"
                />
              </a>
            </li>
            <li>
              <a
                href="http://stevenmckinnon.co.uk"
                title="Steve McKinnon Photography"
              >
                <i
                  className="fa fa-camera"
                />
              </a>
            </li>
            <li>
              <a
                href="https://github.com/stevenmckinnon"
              >
                <i
                  className="fa fa-github"
                />
              </a>
            </li>
          </ul>
          <ul
            className="copyright"
          >
            <li>
              © Copyright 
              2019
               Steven McKinnon
            </li>
          </ul>
        </div>
        <div
          id="go-top"
        >
          <a
            className="smoothscroll"
            href="#home"
            title="Back to Top"
          >
            <i
              className="icon-up-open"
            />
          </a>
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="twelve columns"
          >
            <ul
              className="social-links"
            >
              <li>
                <a
                  href="http://twitter.com/stevenmckinnon"
                >
                  <i
                    className="fa fa-twitter"
                  />
                </a>
              </li>
              <li>
                <a
                  href="https://www.linkedin.com/in/stevenmckinnon92/"
                >
                  <i
                    className="fa fa-linkedin"
                  />
                </a>
              </li>
              <li>
                <a
                  href="http://instagram.com/stevenmckinnon"
                >
                  <i
                    className="fa fa-instagram"
                  />
                </a>
              </li>
              <li>
                <a
                  href="http://stevenmckinnon.co.uk"
                  title="Steve McKinnon Photography"
                >
                  <i
                    className="fa fa-camera"
                  />
                </a>
              </li>
              <li>
                <a
                  href="https://github.com/stevenmckinnon"
                >
                  <i
                    className="fa fa-github"
                  />
                </a>
              </li>
            </ul>
            <ul
              className="copyright"
            >
              <li>
                © Copyright 
                2019
                 Steven McKinnon
              </li>
            </ul>
          </div>,
          <div
            id="go-top"
          >
            <a
              className="smoothscroll"
              href="#home"
              title="Back to Top"
            >
              <i
                className="icon-up-open"
              />
            </a>
          </div>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ul
                className="social-links"
              >
                <li>
                  <a
                    href="http://twitter.com/stevenmckinnon"
                  >
                    <i
                      className="fa fa-twitter"
                    />
                  </a>
                </li>
                <li>
                  <a
                    href="https://www.linkedin.com/in/stevenmckinnon92/"
                  >
                    <i
                      className="fa fa-linkedin"
                    />
                  </a>
                </li>
                <li>
                  <a
                    href="http://instagram.com/stevenmckinnon"
                  >
                    <i
                      className="fa fa-instagram"
                    />
                  </a>
                </li>
                <li>
                  <a
                    href="http://stevenmckinnon.co.uk"
                    title="Steve McKinnon Photography"
                  >
                    <i
                      className="fa fa-camera"
                    />
                  </a>
                </li>
                <li>
                  <a
                    href="https://github.com/stevenmckinnon"
                  >
                    <i
                      className="fa fa-github"
                    />
                  </a>
                </li>
              </ul>,
              <ul
                className="copyright"
              >
                <li>
                  © Copyright 
                  2019
                   Steven McKinnon
                </li>
              </ul>,
            ],
            "className": "twelve columns",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li>
                    <a
                      href="http://twitter.com/stevenmckinnon"
                    >
                      <i
                        className="fa fa-twitter"
                      />
                    </a>
                  </li>,
                  <li>
                    <a
                      href="https://www.linkedin.com/in/stevenmckinnon92/"
                    >
                      <i
                        className="fa fa-linkedin"
                      />
                    </a>
                  </li>,
                  <li>
                    <a
                      href="http://instagram.com/stevenmckinnon"
                    >
                      <i
                        className="fa fa-instagram"
                      />
                    </a>
                  </li>,
                  <li>
                    <a
                      href="http://stevenmckinnon.co.uk"
                      title="Steve McKinnon Photography"
                    >
                      <i
                        className="fa fa-camera"
                      />
                    </a>
                  </li>,
                  <li>
                    <a
                      href="https://github.com/stevenmckinnon"
                    >
                      <i
                        className="fa fa-github"
                      />
                    </a>
                  </li>,
                ],
                "className": "social-links",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      href="http://twitter.com/stevenmckinnon"
                    >
                      <i
                        className="fa fa-twitter"
                      />
                    </a>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <i
                        className="fa fa-twitter"
                      />,
                      "href": "http://twitter.com/stevenmckinnon",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-twitter",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    "type": "a",
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      href="https://www.linkedin.com/in/stevenmckinnon92/"
                    >
                      <i
                        className="fa fa-linkedin"
                      />
                    </a>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <i
                        className="fa fa-linkedin"
                      />,
                      "href": "https://www.linkedin.com/in/stevenmckinnon92/",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-linkedin",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    "type": "a",
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      href="http://instagram.com/stevenmckinnon"
                    >
                      <i
                        className="fa fa-instagram"
                      />
                    </a>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <i
                        className="fa fa-instagram"
                      />,
                      "href": "http://instagram.com/stevenmckinnon",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-instagram",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    "type": "a",
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      href="http://stevenmckinnon.co.uk"
                      title="Steve McKinnon Photography"
                    >
                      <i
                        className="fa fa-camera"
                      />
                    </a>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <i
                        className="fa fa-camera"
                      />,
                      "href": "http://stevenmckinnon.co.uk",
                      "title": "Steve McKinnon Photography",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-camera",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    "type": "a",
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a
                      href="https://github.com/stevenmckinnon"
                    >
                      <i
                        className="fa fa-github"
                      />
                    </a>,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <i
                        className="fa fa-github"
                      />,
                      "href": "https://github.com/stevenmckinnon",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-github",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    "type": "a",
                  },
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <li>
                  © Copyright 
                  2019
                   Steven McKinnon
                </li>,
                "className": "copyright",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "© Copyright ",
                    2019,
                    " Steven McKinnon",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "© Copyright ",
                  2019,
                  " Steven McKinnon",
                ],
                "type": "li",
              },
              "type": "ul",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              className="smoothscroll"
              href="#home"
              title="Back to Top"
            >
              <i
                className="icon-up-open"
              />
            </a>,
            "id": "go-top",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                className="icon-up-open"
              />,
              "className": "smoothscroll",
              "href": "#home",
              "title": "Back to Top",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "icon-up-open",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "a",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
        >
          <div
            className="twelve columns"
          >
            <ul
              className="social-links"
            >
              <li>
                <a
                  href="http://twitter.com/stevenmckinnon"
                >
                  <i
                    className="fa fa-twitter"
                  />
                </a>
              </li>
              <li>
                <a
                  href="https://www.linkedin.com/in/stevenmckinnon92/"
                >
                  <i
                    className="fa fa-linkedin"
                  />
                </a>
              </li>
              <li>
                <a
                  href="http://instagram.com/stevenmckinnon"
                >
                  <i
                    className="fa fa-instagram"
                  />
                </a>
              </li>
              <li>
                <a
                  href="http://stevenmckinnon.co.uk"
                  title="Steve McKinnon Photography"
                >
                  <i
                    className="fa fa-camera"
                  />
                </a>
              </li>
              <li>
                <a
                  href="https://github.com/stevenmckinnon"
                >
                  <i
                    className="fa fa-github"
                  />
                </a>
              </li>
            </ul>
            <ul
              className="copyright"
            >
              <li>
                © Copyright 
                2019
                 Steven McKinnon
              </li>
            </ul>
          </div>
          <div
            id="go-top"
          >
            <a
              className="smoothscroll"
              href="#home"
              title="Back to Top"
            >
              <i
                className="icon-up-open"
              />
            </a>
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="twelve columns"
            >
              <ul
                className="social-links"
              >
                <li>
                  <a
                    href="http://twitter.com/stevenmckinnon"
                  >
                    <i
                      className="fa fa-twitter"
                    />
                  </a>
                </li>
                <li>
                  <a
                    href="https://www.linkedin.com/in/stevenmckinnon92/"
                  >
                    <i
                      className="fa fa-linkedin"
                    />
                  </a>
                </li>
                <li>
                  <a
                    href="http://instagram.com/stevenmckinnon"
                  >
                    <i
                      className="fa fa-instagram"
                    />
                  </a>
                </li>
                <li>
                  <a
                    href="http://stevenmckinnon.co.uk"
                    title="Steve McKinnon Photography"
                  >
                    <i
                      className="fa fa-camera"
                    />
                  </a>
                </li>
                <li>
                  <a
                    href="https://github.com/stevenmckinnon"
                  >
                    <i
                      className="fa fa-github"
                    />
                  </a>
                </li>
              </ul>
              <ul
                className="copyright"
              >
                <li>
                  © Copyright 
                  2019
                   Steven McKinnon
                </li>
              </ul>
            </div>,
            <div
              id="go-top"
            >
              <a
                className="smoothscroll"
                href="#home"
                title="Back to Top"
              >
                <i
                  className="icon-up-open"
                />
              </a>
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ul
                  className="social-links"
                >
                  <li>
                    <a
                      href="http://twitter.com/stevenmckinnon"
                    >
                      <i
                        className="fa fa-twitter"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      href="https://www.linkedin.com/in/stevenmckinnon92/"
                    >
                      <i
                        className="fa fa-linkedin"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      href="http://instagram.com/stevenmckinnon"
                    >
                      <i
                        className="fa fa-instagram"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      href="http://stevenmckinnon.co.uk"
                      title="Steve McKinnon Photography"
                    >
                      <i
                        className="fa fa-camera"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      href="https://github.com/stevenmckinnon"
                    >
                      <i
                        className="fa fa-github"
                      />
                    </a>
                  </li>
                </ul>,
                <ul
                  className="copyright"
                >
                  <li>
                    © Copyright 
                    2019
                     Steven McKinnon
                  </li>
                </ul>,
              ],
              "className": "twelve columns",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li>
                      <a
                        href="http://twitter.com/stevenmckinnon"
                      >
                        <i
                          className="fa fa-twitter"
                        />
                      </a>
                    </li>,
                    <li>
                      <a
                        href="https://www.linkedin.com/in/stevenmckinnon92/"
                      >
                        <i
                          className="fa fa-linkedin"
                        />
                      </a>
                    </li>,
                    <li>
                      <a
                        href="http://instagram.com/stevenmckinnon"
                      >
                        <i
                          className="fa fa-instagram"
                        />
                      </a>
                    </li>,
                    <li>
                      <a
                        href="http://stevenmckinnon.co.uk"
                        title="Steve McKinnon Photography"
                      >
                        <i
                          className="fa fa-camera"
                        />
                      </a>
                    </li>,
                    <li>
                      <a
                        href="https://github.com/stevenmckinnon"
                      >
                        <i
                          className="fa fa-github"
                        />
                      </a>
                    </li>,
                  ],
                  "className": "social-links",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <a
                        href="http://twitter.com/stevenmckinnon"
                      >
                        <i
                          className="fa fa-twitter"
                        />
                      </a>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <i
                          className="fa fa-twitter"
                        />,
                        "href": "http://twitter.com/stevenmckinnon",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "fa fa-twitter",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": "a",
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <a
                        href="https://www.linkedin.com/in/stevenmckinnon92/"
                      >
                        <i
                          className="fa fa-linkedin"
                        />
                      </a>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <i
                          className="fa fa-linkedin"
                        />,
                        "href": "https://www.linkedin.com/in/stevenmckinnon92/",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "fa fa-linkedin",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": "a",
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <a
                        href="http://instagram.com/stevenmckinnon"
                      >
                        <i
                          className="fa fa-instagram"
                        />
                      </a>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <i
                          className="fa fa-instagram"
                        />,
                        "href": "http://instagram.com/stevenmckinnon",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "fa fa-instagram",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": "a",
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <a
                        href="http://stevenmckinnon.co.uk"
                        title="Steve McKinnon Photography"
                      >
                        <i
                          className="fa fa-camera"
                        />
                      </a>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <i
                          className="fa fa-camera"
                        />,
                        "href": "http://stevenmckinnon.co.uk",
                        "title": "Steve McKinnon Photography",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "fa fa-camera",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": "a",
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <a
                        href="https://github.com/stevenmckinnon"
                      >
                        <i
                          className="fa fa-github"
                        />
                      </a>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <i
                          className="fa fa-github"
                        />,
                        "href": "https://github.com/stevenmckinnon",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "fa fa-github",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": "a",
                    },
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <li>
                    © Copyright 
                    2019
                     Steven McKinnon
                  </li>,
                  "className": "copyright",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "© Copyright ",
                      2019,
                      " Steven McKinnon",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "© Copyright ",
                    2019,
                    " Steven McKinnon",
                  ],
                  "type": "li",
                },
                "type": "ul",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                className="smoothscroll"
                href="#home"
                title="Back to Top"
              >
                <i
                  className="icon-up-open"
                />
              </a>,
              "id": "go-top",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <i
                  className="icon-up-open"
                />,
                "className": "smoothscroll",
                "href": "#home",
                "title": "Back to Top",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "icon-up-open",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              "type": "a",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Tests the Footer component renders the Footer component 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Footer
    name="Steve McKinnon"
    socialMedia={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
      >
        <div
          className="twelve columns"
        >
          <ul
            className="social-links"
          />
          <ul
            className="copyright"
          >
            <li>
              © Copyright 
              2019
               Steven McKinnon
            </li>
          </ul>
        </div>
        <div
          id="go-top"
        >
          <a
            className="smoothscroll"
            href="#home"
            title="Back to Top"
          >
            <i
              className="icon-up-open"
            />
          </a>
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="twelve columns"
          >
            <ul
              className="social-links"
            />
            <ul
              className="copyright"
            >
              <li>
                © Copyright 
                2019
                 Steven McKinnon
              </li>
            </ul>
          </div>,
          <div
            id="go-top"
          >
            <a
              className="smoothscroll"
              href="#home"
              title="Back to Top"
            >
              <i
                className="icon-up-open"
              />
            </a>
          </div>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ul
                className="social-links"
              />,
              <ul
                className="copyright"
              >
                <li>
                  © Copyright 
                  2019
                   Steven McKinnon
                </li>
              </ul>,
            ],
            "className": "twelve columns",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  null,
                  null,
                  null,
                  null,
                  null,
                ],
                "className": "social-links",
              },
              "ref": null,
              "rendered": Array [
                null,
                null,
                null,
                null,
                null,
              ],
              "type": "ul",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <li>
                  © Copyright 
                  2019
                   Steven McKinnon
                </li>,
                "className": "copyright",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "© Copyright ",
                    2019,
                    " Steven McKinnon",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "© Copyright ",
                  2019,
                  " Steven McKinnon",
                ],
                "type": "li",
              },
              "type": "ul",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              className="smoothscroll"
              href="#home"
              title="Back to Top"
            >
              <i
                className="icon-up-open"
              />
            </a>,
            "id": "go-top",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <i
                className="icon-up-open"
              />,
              "className": "smoothscroll",
              "href": "#home",
              "title": "Back to Top",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "icon-up-open",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "type": "a",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
        >
          <div
            className="twelve columns"
          >
            <ul
              className="social-links"
            />
            <ul
              className="copyright"
            >
              <li>
                © Copyright 
                2019
                 Steven McKinnon
              </li>
            </ul>
          </div>
          <div
            id="go-top"
          >
            <a
              className="smoothscroll"
              href="#home"
              title="Back to Top"
            >
              <i
                className="icon-up-open"
              />
            </a>
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="twelve columns"
            >
              <ul
                className="social-links"
              />
              <ul
                className="copyright"
              >
                <li>
                  © Copyright 
                  2019
                   Steven McKinnon
                </li>
              </ul>
            </div>,
            <div
              id="go-top"
            >
              <a
                className="smoothscroll"
                href="#home"
                title="Back to Top"
              >
                <i
                  className="icon-up-open"
                />
              </a>
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ul
                  className="social-links"
                />,
                <ul
                  className="copyright"
                >
                  <li>
                    © Copyright 
                    2019
                     Steven McKinnon
                  </li>
                </ul>,
              ],
              "className": "twelve columns",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    null,
                    null,
                    null,
                    null,
                    null,
                  ],
                  "className": "social-links",
                },
                "ref": null,
                "rendered": Array [
                  null,
                  null,
                  null,
                  null,
                  null,
                ],
                "type": "ul",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <li>
                    © Copyright 
                    2019
                     Steven McKinnon
                  </li>,
                  "className": "copyright",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "© Copyright ",
                      2019,
                      " Steven McKinnon",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "© Copyright ",
                    2019,
                    " Steven McKinnon",
                  ],
                  "type": "li",
                },
                "type": "ul",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                className="smoothscroll"
                href="#home"
                title="Back to Top"
              >
                <i
                  className="icon-up-open"
                />
              </a>,
              "id": "go-top",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <i
                  className="icon-up-open"
                />,
                "className": "smoothscroll",
                "href": "#home",
                "title": "Back to Top",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "icon-up-open",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              "type": "a",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
